# API-Toolkit

./: .gitignore  CMakeLists.txt  README.md
Documentation/Examples/: CMakeLists.txt
Documentation/Examples/Load/: loading.cpp
Documentation/Examples/Setup/: load_setup.cpp  setup_example.scorejson
Headers/Debug/: Printer.h
Headers/Editor/: TlkCurve.h
Headers/Load/: Loader.h
Headers/Setup/: Network.h  Project.h  Score.h
Implementations/: CMakeLists.txt
Implementations/Jamoma/: Makefile
Implementations/Jamoma/OSSIA-API-Toolkit.xcodeproj/: project.pbxproj
Implementations/Jamoma/Sources/Editor/: TlkCurve.cpp
Implementations/Jamoma/Sources/Load/: README.md
Implementations/Jamoma/Sources/Save/: README.md
Implementations/Main/: CMakeLists.txt  Makefile
Implementations/Main/Includes/Debug/: MainPrinter.h
Implementations/Main/Includes/Load/: MainLoader.h
Implementations/Main/Includes/Setup/: MainNetwork.h  MainProject.h  MainScore.h
Implementations/Main/Includes/Units/: README.md
Implementations/Main/OSSIA-API-Toolkit.xcodeproj/: project.pbxproj
Implementations/Main/OSSIA-APIToolkit.xcodeproj/: project.pbxproj
Implementations/Main/Sources/Debug/: Printer.cpp
Implementations/Main/Sources/Load/: Loader.cpp
Implementations/Main/Sources/Setup/: Network.cpp  Project.cpp  Score.cpp
Tests/: CMakeLists.txt  ForwardDeclaration.h
Tests/Debug/: PrinterTest.cpp
Tests/Setup/: NetworkTest.cpp  ProjectTest.cpp  ScoreTest.cpp
